--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Voice CMS</title>
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-purple-100">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
